# OmniGPU

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  .gitmodules  .lldbinit  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  ML_PLAN.md  README.md  build.bat  build.ps1  chiaviec.md  delegate_tasks.md  omnigpu_guest.json  omnigpu_host.json  task.md  test_loader.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  deploy.yml  test.yml
cmake/: OmniGPUThirdParty.cmake
docs/: installation-windows.md  llama_cpp_linux.md  readme-package.txt
packaging/linux/: omnigpu-host.service.in
scratch/: parse_dump.py
scripts/: install_guest_linux.sh
scripts/linux/: build-and-package.sh  build_clvk.sh  build_llama_cpp.sh  diagnose.sh  install_guest.sh  install_host.sh  omnigpu-host.service  omnigpu-llama.sh  setup_guest.sh
scripts/windows/: build-and-package.ps1  build_clvk.bat  build_deploy_test.ps1  diagnose.ps1  install-host-service.ps1  install.bat  install_clvk.bat  install_guest.ps1  install_omnigpu_vm.ps1  quick-install.ps1  ssh_test.py  start-daemon.bat  test_guest.ps1  uninstall.bat
src/: CMakeLists.txt
src/common/: CMakeLists.txt  flatbuffers_utils.cpp  flatbuffers_utils.h  gpu_caps.h  gpu_caps_store.cpp  gpu_caps_store.h  logger.cpp  logger.h  network_utils.cpp  network_utils.h  platform_compat.h
src/guest/: CMakeLists.txt  cache_manager.cpp  cache_manager.h  client.cpp  client.h  command_batch.cpp  command_batch.h  dll_main.cpp  ffmpeg_decoder.cpp  ffmpeg_decoder.h  guest_config.cpp  guest_config.h  guest_daemon.cpp  guest_init.cpp  guest_init.h  guest_ipc.cpp  guest_ipc.h  icd_entrypoints.cpp  icd_entrypoints.h  icd_registry.cpp  icd_registry.h  loader.cpp  loader.h  main.cpp  resource_tracker.cpp  resource_tracker.h  video_decoder.cpp  video_decoder.h  vk_icd.json  vk_icd.json.in  vk_intercept.cpp  vk_intercept.h  vk_intercept_gen.cpp  vulkan_serializer.cpp  vulkan_serializer.h  vulkan_struct_serializer.cpp  vulkan_struct_serializer.h
src/host/: CMakeLists.txt  adaptive_compressor.cpp  adaptive_compressor.h  amf_encoder.cpp  amf_encoder.h  buffer_manager.cpp  buffer_manager.h  cli.cpp  cli.h  command_dispatcher.cpp  command_dispatcher.h  compressor.cpp  compressor.h  config.cpp  config.h  ffmpeg_encoder.cpp  ffmpeg_encoder.h  gpu_manager.cpp  gpu_manager.h  handshake.cpp  handshake.h  jpeg_encoder.cpp  jpeg_encoder.h  main.cpp  multi_gpu_compute.cpp  multi_gpu_compute.h  multi_gpu_renderer.cpp  multi_gpu_renderer.h  nvenc_encoder.cpp  nvenc_encoder.h  renderer.cpp  renderer.h  resource_cache.cpp  resource_cache.h  server.cpp  server.h  service_manager.cpp  service_manager.h  session.cpp  session.h  (+8 more)
src/launcher/: CMakeLists.txt  launcher.cpp
src/schemas/: omnigpu_protocol.fbs
src/tools/: compute_add.comp  compute_add_spv.h  compute_mul.comp  compute_mul_spv.h  omnigpu_guestctl.cpp  omnigpu_guestgui.cpp  vk_compute_test.cpp
tests/: CMakeLists.txt  test_guest.cpp  test_host.cpp  test_llama_launcher.sh  test_network.cpp
tools/windows/: OmniGPU-Launcher.ps1  OmniGPU-Manager.ps1
